--- a/index.html
+++ b/index.html
@@ -3,14 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="cuantocabron.com" />
+    <meta name="rating" content="General" />
+    <meta name="owner" content="cuantocabron.com" />
+    <meta name="language" content="ES" />
+    <meta name="keywords" content="ultimos,memes,humor,risas,dibujos,graficos,chistes"/>
     <title>MemeParece</title>
 </head>
 <body>
-    <h1>MemeParece</h1>
-    <h2>Memes</h2>
-    <h2>Videos</h2>
-    <h2>Aportes</h2>
-    <h2>Publicidad</h2>
-    <h2>Tienda</h2>
+    <div id="header">
+        <div id="headerContainer">
+            <div id="logo"><a href="" title=""></a></div>
+            <div id="menu">
+                   <ul id="nav">
+                    <li><a href=" " title="" class="active">Memes</a></li>
+                    <li><a href=" " title=" " >Videos</a></li>
+                       <li><a href=" " title=" " >Aportes</a></li>
+                       <li class="especial"><a href="" title="Crea tu propio meme" >Enviar Aporte</a></li>
+                       <li class="especial"><a href=" " title="" >Tienda</a></li>
+                </ul>
+            </div> 
+            <div class="clear"></div>
+        </div>	
+    </div>
 </body>
 </html>
