Probando ahora que es publico

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="cuantocabron.com" />
+    <meta name="author" content="MemeParece />
     <meta name="rating" content="General" />
-    <meta name="owner" content="cuantocabron.com" />
+    <meta name="owner" content="MemeParece.com" />
     <meta name="language" content="ES" />
     <meta name="keywords" content="ultimos,memes,humor,risas,dibujos,graficos,chistes"/>
     <title>MemeParece</title>
@@ -84,7 +84,5 @@
     </div>
 </div>
 </div>
-
-
 </body>
 </html>
