--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="owner" content="MemeParece.com" />
     <meta name="language" content="ES" />
     <meta name="keywords" content="ultimos,memes,humor,risas,dibujos,graficos,chistes"/>
+    <body>
+        <p style="color:rgba(14, 13, 13, 0.5);">MemeParece Inicio</p>
+      </body>
     <title>MemeParece</title>
     <link rel="stylesheet" media="screen" type="text/css" href="estilos.css" />
 </head>
