--- a/index.html
+++ b/index.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="MemeParece />
-    <meta name="rating" content="General" />
+    <meta name="rating" content="General"/>
     <meta name="owner" content="MemeParece.com" />
     <meta name="language" content="ES" />
     <meta name="keywords" content="ultimos,memes,humor,risas,dibujos,graficos,chistes"/>
-    <body>
-        <p style="color:rgba(14, 13, 13, 0.5);">MemeParece Inicio</p>
-      </body>
-    <title>MemeParece</title>
+ <title>MemeParece</title>
     <link rel="stylesheet" media="screen" type="text/css" href="estilos.css" />
 </head>
 <body>
-    <div id="header">
-        <div id="headerContainer">
-            <div id="logo"><a href="" title=""></a></div>
-            <div id="menu">
-                   <ul id="nav">
-                    <li><a href=" " title="" class="active">Memes</a></li>
-                    <li><a href=" " title=" " >Videos</a></li>
-                       <li><a href=" " title=" " >Mejores Aportes</a></li>
-                       <li class="especial"><a href="" title="Crea tu propio meme" >Enviar Aporte</a></li>
-                       <li class="especial"><a href=" " title="" >Tienda</a></li>
-                </ul>
-            </div> 
-            <div class="clear"></div>
-        </div>	
-    </div>
+    <img src="imagenes/memeparece1.jpeg" alt="MemeParece" height="507">
+</body>  
+    <nav id="menu"> 
+        <ul >
+            <li><a href="#" title="" class="active">Memes</a></li>
+            <li class="barra">|</li>
+            <li><a href="#" title=" " >Videos</a></li>
+            <li class="barra">|</li>
+            <li><a href="#" title=" " >Mejores Aportes</a></li>
+            <li class="barra">|</li>
+            <li><a href="#" title="" >Enviar Aporte</a></li>
+            <li class="barra">|</li>
+            <li><a href="#" title="" >MainWinS</a></li>
+            <li class="barra">|</li>
+            <li><a href="#" title="" >Donaciones</a></li>
+        </ul> 
+    </nav> 
+<body>
 
     <div class="nav_box rounded3px">
         <h2 style="text-align:center">Ranking de Usuarios</h2>
