--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <img src="imagenes/memeparece1.jpeg" alt="MemeParece" height="507">
 </body>  
+
     <nav id="menu"> 
         <ul >
             <li><a href="#" title="" class="active">Memes</a></li>
@@ -29,7 +30,18 @@
             <li><a href="#" title="" >Donaciones</a></li>
         </ul> 
     </nav> 
-<body>
+    <body>
+        <div class="cuerpo">
+            <a href="#"target="_blsnk"><img src="icons/facebook.png" class="rs"></a>
+            <a href="#"target="_blsnk"><img src="icons/instagram.png" class="rs"></a>
+            <a href="https://www.youtube.com" target="_blsnk"><img src="icons/youtube.png" class="rs"></a>
+            <a href="#"target="_blsnk"><img src="icons/telegrama.png" class="rs"></a>
+            <a href="#"target="_blsnk"><img src="icons/gmail.png" class="rs"></a>
+            
+            
+        </div>
+    </body>
+<body> 
 
     <div class="nav_box rounded3px">
         <h2 style="text-align:center">Ranking de Usuarios</h2>
