--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </nav> 
     <body>
         <div class="cuerpo">
-            <a href="#"target="_blsnk"><img src="icons/facebook.png" class="rs"></a>
-            <a href="#"target="_blsnk"><img src="icons/instagram.png" class="rs"></a>
+            <a href="https://www.facebook.com/Memeparece-110174387505089"target="_blsnk"><img src="icons/facebook.png" class="rs"></a>
+            <a href="https://www.instagram.com/memeparece/"target="_blsnk"><img src="icons/instagram.png" class="rs"></a>
             <a href="https://www.youtube.com" target="_blsnk"><img src="icons/youtube.png" class="rs"></a>
             <a href="#"target="_blsnk"><img src="icons/telegrama.png" class="rs"></a>
             <a href="#"target="_blsnk"><img src="icons/gmail.png" class="rs"></a>
