--- a/index.html
+++ b/index.html
@@ -8,26 +8,24 @@
     <meta name="owner" content="MemeParece.com" />
     <meta name="language" content="ES" />
     <meta name="keywords" content="ultimos,memes,humor,risas,dibujos,graficos,chistes"/>
- <title>MemeParece</title>
     <link rel="stylesheet" media="screen" type="text/css" href="estilos.css" />
 </head>
-<body>
-    <img src="imagenes/memeparece1.jpeg" alt="MemeParece" height="507">
-</body>  
-
-    <nav id="menu"> 
-        <ul >
-            <li><a href="#" title="" class="active">Memes</a></li>
+<body>              
+    <img src="imagenes/memeparece1.jpeg" alt="#" height="500" >                             
+</body>   
+    <nav id="menu">
+        <ul>
+            <li><a href="index.html" title="" >MemeParece</a></li>
             <li class="barra">|</li>
-            <li><a href="#" title=" " >Videos</a></li>
+            <li><a href="paginas/Memes.html" title="" class="active">Memes</a></li>
             <li class="barra">|</li>
-            <li><a href="#" title=" " >Mejores Aportes</a></li>
+            <li><a href="paginas/Videos.html" title=" " >Videos</a></li>
             <li class="barra">|</li>
-            <li><a href="#" title="" >Enviar Aporte</a></li>
+            <li><a href="paginas/MejoresAportes.html" title=" " >Mejores Aportes</a></li>
             <li class="barra">|</li>
-            <li><a href="#" title="" >MainWinS</a></li>
+            <li><a href="paginas/EviarAporte.html" title="" >Enviar Aporte</a></li>
             <li class="barra">|</li>
-            <li><a href="#" title="" >Donaciones</a></li>
+            <li><a href="paginas/Donaciones.html" title="" >Donaciones</a></li>
         </ul> 
     </nav> 
     <body>
