--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="language" content="ES" />
     <meta name="keywords" content="ultimos,memes,humor,risas,dibujos,graficos,chistes"/>
     <link rel="stylesheet" media="screen" type="text/css" href="estilos.css" />
+    <title>MemeParece</title>
 </head>
 <body>              
     <img src="imagenes/memeparece1.jpeg" alt="#" height="500" >                             
