--- a/paginas/Donaciones.html
+++ b/paginas/Donaciones.html
@@ -8,9 +8,10 @@
     <meta name="owner" content="MemeParece.com" />
     <meta name="language" content="ES" />
     <meta name="keywords" content="ultimos,memes,humor,risas,dibujos,graficos,chistes"/>
- <title>Memes</title>
+ <title>MemeParece</title>
     <link rel="stylesheet" media="screen" type="text/css" href="../estilos.css" />
 </head>
+<p>Donaciones</p>
     <nav id="menu"> 
         <ul>
             <body>              
