--- a/html/aportes.html
+++ b/html/aportes.html
@@ -22,6 +22,15 @@
                  <a class="menuit" href="cuboTouch.html" aria-current="page" title="cubo">Cubo<a>
             </nav> 
         </div>
+        <body>
+            <div class="redes">
+                <a href="https://www.facebook.com/Memeparece-110174387505089" target="_blank"><img src="../icons/facebook.png" class="icons" alt=""></a>
+                <a href="https://www.instagram.com/memeparece/" target="_blank"><img src="../icons/instagram.png" class="icons" alt=""></a>
+                <a href="#"target="_blank"><img src="../icons/telegrama.png" class="icons" alt=""></a>
+                <a href="#"target="_blank"><img src="../icons/youtube.png" class="icons" alt=""></a>
+                <a href="#"target="_blank"><img src="../icons/gmail.png" class="icons" alt=""></a>
+            </div>
+        </body>
     </header>
     <main>
         <section id="Informacion">
@@ -31,6 +40,25 @@
                 Por el momento no hay nada por mostrar debes estar atento por mas actualizaciones, recuerda vistarnos en nuestras redes sociales.
             </p>
         </div>
+        <body>
+            <form action="">
+                <fieldset>
+                    <legend>Aporte</legend>
+                    <label for="">Que tipo  de aporte desea realizar</label>
+                <select name="id="">
+                    <option value="">Meme</option>
+                    <option value="">Vdeo</option>
+                    <Option>Dato Curioso</Option>
+                </select><br><br>
+                <label for="">Red social para la mencion de la publicacion</label>
+                <input type="text"><br><br>
+                <p>descripcion breve</p>
+                <textarea name="" id="" cols="30" rows="10"></textarea><br><br>
+                <input type="file"><br><br>
+                <button>Eviar</button>
+            </form>
+        </fieldset>
+        </body>
         </section>
     </main>
 </body>
