--- a/html/index.html
+++ b/html/index.html
@@ -9,14 +9,17 @@
     <meta name="language" content="ES" />
     <meta name="keywords" content="ultimos,memes,humor,risas,dibujos,graficos,chistes"/>
  <title>MemeParece</title>
-    <link rel="stylesheet" href="../css/font.css">
     <link rel="stylesheet" media="screen" type="text/css" href="../css/estilo1.css" />
+    <link rel="stylesheet" href="../css/experiment.css">
+    <link rel="stylesheet" href="../css/cubo.css">
+    <link rel="stylesheet" href="../css/font.css">
+    <!-- <link rel="stylesheet" media="screen" type="text/css" href="../css/estilo1.css"/> -->
 </head>
 <body>
    <!-- <img src="imagenes/memeparece1.jpeg" alt="MemeParece" height="507">-->
    <header>
        <div class="menubg">
-           <h2 class="icon-memeparece">MemeParece</h2>
+           <a><h2 class="icon-memeparece">MemeParece</h2></a>
            <input type="checkbox" id="menu-bar">
            <label class="icon-menu" for="menu-bar"></label>
            <nav class="menu"> 
@@ -28,6 +31,45 @@
                 <a class="menuit" href="cuboTouch.html" aria-current="page" title="cubo">Cubo<a>
            </nav> 
        </div>
+       <body>
+           <div class="redes">
+               <a href="https://www.facebook.com/Memeparece-110174387505089" target="_blank"><img src="../icons/facebook.png" class="icons" alt=""></a>
+               <a href="https://www.instagram.com/memeparece/" target="_blank"><img src="../icons/instagram.png" class="icons" alt=""></a>
+               <a href="#"target="_blank"><img src="../icons/telegrama.png" class="icons" alt=""></a>
+               <a href="#"target="_blank"><img src="../icons/youtube.png" class="icons" alt=""></a>
+               <a href="#"target="_blank"><img src="../icons/gmail.png" class="icons" alt=""></a>
+           </div>
+       </body>
    </header>
+   <main>
+    <section id="Informaci">
+        <h3>Cubo js prueba 1</h3>
+            <article class="viewport">
+            <section class="cube">
+                <div>
+                    <h3>Memeparece</h3>
+                    <p>Utilice las flechas para mover el cubo o puede hacer presionando con el mouse o con tocandolo si esta en un dispositivo con pantalla tactil, para reinicar presiones la tecla ESC</p>
+                </div>
+                <div>
+                    Esta es una prueba de para la pagina de Memeparece
+                </div>
+                <div>
+                    Hola mundo
+                </div>
+                <div>
+                    <p>Recuerda visitar nuestras redes sociales</p>
+                </div>
+                <div>
+                    <p>Puto el que lo lea.</p>
+                </div>
+                <div>
+                    <p>Gracias por visitar esta pagina</p>
+                </div>
+            </section>
+        </article>
+            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+            <script src="../js/touch.js"></script>
+        </section>    
+    </main>
 </body>
 </html>
