--- a/html/donaciones.html
+++ b/html/donaciones.html
@@ -22,6 +22,15 @@
                  <a class="menuit" href="cuboTouch.html" aria-current="page" title="cubo">Cubo<a>
             </nav> 
         </div>
+        <body>
+            <div class="redes">
+                <a href="https://www.facebook.com/Memeparece-110174387505089" target="_blank"><img src="../icons/facebook.png" class="icons" alt=""></a>
+                <a href="https://www.instagram.com/memeparece/" target="_blank"><img src="../icons/instagram.png" class="icons" alt=""></a>
+                <a href="#"target="_blank"><img src="../icons/telegrama.png" class="icons" alt=""></a>
+                <a href="#"target="_blank"><img src="../icons/youtube.png" class="icons" alt=""></a>
+                <a href="#"target="_blank"><img src="../icons/gmail.png" class="icons" alt=""></a>
+            </div>
+        </body>
     </header>
     <main>
         <section id="Informacion">
