--- a/html/mainwins.html
+++ b/html/mainwins.html
@@ -22,15 +22,62 @@
                  <a class="menuit" href="cuboTouch.html" aria-current="page" title="cubo">Cubo<a>
             </nav> 
         </div>
+        <body>
+            <div class="redes">
+                <a href="https://www.facebook.com/Memeparece-110174387505089" target="_blank"><img src="../icons/facebook.png" class="icons" alt=""></a>
+                <a href="https://www.instagram.com/memeparece/" target="_blank"><img src="../icons/instagram.png" class="icons" alt=""></a>
+                <a href="#"target="_blank"><img src="../icons/telegrama.png" class="icons" alt=""></a>
+                <a href="#"target="_blank"><img src="../icons/youtube.png" class="icons" alt=""></a>
+                <a href="#"target="_blank"><img src="../icons/gmail.png" class="icons" alt=""></a>
+            </div>
+        </body>
     </header>
     <main>
         <section id="Informacion">
+         <nav>
             <h3>Quienes Somos</h3><br>
-        <div>
-            <p>
-                Por el momento no hay nada por mostrar debes estar atento por mas actualizaciones, recuerda vistarnos en nuestras redes sociales.
-            </p>
-        </div>
+        </nav>
+    <section>
+        <img src="../imagenes/m00.jpeg" class="imgn" alt="">
+        <article>
+            MainWina es una compañia fundada en 2015 por dos jovenes emprendedores que se dedicaban inicialmente a la venta 
+            chocolates, gracias al carisma y su naturaleza para los negocios la compañia fue creciendo de forma rapida, siendo 
+            el agrado para muchos y muchas.
+        </article><br><br>
+        <img src="../imagenes/m9.png" class="imgn" alt="">
+        <p>gracias a la venta de chocolates MainwinS tienen una Clinica Dental </p><br><br>
+        <article>
+            En el Año 2016 MainWins da uno de sus primeros pasos en el negocio de las convenciones Animes de el salvador.
+            teniendo a la venta distintos manjares de la comida rapida.
+        </article><br><br>
+        <img src="../imagenes/m1.jpeg" class="imgn" alt="">
+        <p>Asistentes de MainWins</p><br><br>
+        <article>MainWinS no tenia rival a la hora de ofrecer sus diferentes platillos top, la competencia no tenia ningun tipo de
+             oportunidad para poder competir contra tal maestria de habilidad.
+        </article><br><br>
+        <img src="../imagenes/m2.jpeg" class="imgn" alt="">
+        <p>Competencia de MainWinS</p><br><br>
+        <p>MainWinS Food</p>
+        <article>Productos que ofrece MainwinS</article><br><br>
+        <img src="../imagenes/m3.jpeg" class="imgn" alt=""><br><br>
+        <img src="../imagenes/m4.jpeg" class="imgn" alt=""><br><br>
+        <img src="../imagenes/m5.jpeg" class="imgn" alt=""><br><br><br><br>
+        <p>MainwinS Technology</p>
+        <img src="../imagenes/m6.jpeg" class="imgn" alt=""><br><br>
+        <img src="../imagenes/m8.jpeg" class="imgn" alt=""> <br><br><br><br>
+        <p>MainwinS Ecological</p>
+        <img src="../imagenes/m7.jpeg" class="imgn" alt=""><br><br><br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <footer>
+            <p>derechos reservados</p>
+        </footer>
+    </section>
         </section>
     </main>
 </body>
